--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -122,11 +122,14 @@ jobs:
         conan remote login -p $ARTIFACTORY_TOKEN protestator-conan $ARTIFACTORY_USER
         conan remote remove conancenter
     - name: build_release
-      run: conan create ./ninja/all --name=ninja --version=1.13.1 --build-require
+      run:  | 
+        conan create ./ninja/all --name=ninja --version=1.13.1 --build-require
+        conan upload "*" -r protestator-conan -c
     - name: build debug
-      run: conan create ./ninja/all --name=ninja --version=1.13.1 --build-require -s build_type=Debug
-    - name: deploy
-      run: conan upload "*" -r protestator-conan -c
+      run: | 
+        conan create ./ninja/all --name=ninja --version=1.13.1 --build-require -s build_type=Debug --build missing
+        conan upload "*" -r protestator-conan -c
+
 
   build-meson:
     runs-on: ubuntu-latest
