--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1692,7 +1692,36 @@ jobs:
         conan upload "*" -r protestator-conan -c
     - name: build debug
       run: |
-        cconan create ./mongo-c-driver/2.X.X --version="2.2.0" --name="mongo-c-driver" -s build_type=Debug
+        conan create ./mongo-c-driver/2.X.X --version="2.2.0" --name="mongo-c-driver" -s build_type=Debug
+        conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
+
+  build-mongocxx:
+    runs-on: ubuntu-latest
+    env: # Or as an environment variable
+      ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+      ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
+      ARTIFACTORY_USER: ${{secrets.ARTIFACTORY_USERNAME}}
+    needs: [build-mongoc]
+    steps:
+    - uses: actions/checkout@v4
+    - uses: jfrog/setup-jfrog-cli@v4
+    - name: prepare runner
+      run: | 
+        sudo apt update && sudo apt -y install make autoconf python3 python3-pip cmake libgl-dev libgl1-mesa-dev xkb-data libx11-xcb-dev libfontenc-dev libxaw7-dev libxcomposite-dev libxcursor-dev libxdamage-dev libxfixes-dev libxi-dev libxinerama-dev libxkbfile-dev libxmu-dev libxmuu-dev libxpm-dev libxrandr-dev libxres-dev libxss-dev libxtst-dev libxv-dev libxxf86vm-dev libxcb-glx0-dev libxcb-render-util0-dev libxcb-xkb-dev libxcb-icccm4-dev libxcb-image0-dev libxcb-keysyms1-dev libxcb-randr0-dev libxcb-shape0-dev libxcb-sync-dev libxcb-xfixes0-dev libxcb-xinerama0-dev libxcb-dri3-dev libxcb-cursor-dev libxcb-dri2-0-dev libxcb-dri3-dev libxcb-present-dev libxcb-composite0-dev libxcb-ewmh-dev libxcb-res0-dev libxcb-util-dev uuid-dev
+        sudo pip install --ignore-installed --upgrade conan
+        conan profile detect
+        conan remote add protestator-conan $ARTIFACTORY_URL
+        conan remote login -p $ARTIFACTORY_TOKEN protestator-conan $ARTIFACTORY_USER
+        conan remote remove conancenter
+    - name: build_release
+      run: | 
+        conan create ./mongo-cxx-driver/all --version="4.1.4" --name="mongo-cxx-driver"
+        conan upload "*" -r protestator-conan -c
+    - name: build debug
+      run: |
+        conan create ./mongo-cxx-driver/all --version="4.1.4" --name="mongo-cxx-driver" -s build_type=Debug
         conan upload "*" -r protestator-conan -c
     - name: cleanup
       run: conan remove "*" -c
